api/build_log.txt
> Task :clean

> Task :compileJava
C:\DentiCheck\denticheck\api\src\main\java\com\denticheck\api\domain\admin\service\impl\AdminServiceImpl.java:151: error: cannot find symbol
                log.info("Fetching dentists with keyword: {}", keyword);
                ^
  symbol:   variable log
  location: class AdminServiceImpl
C:\DentiCheck\denticheck\api\src\main\java\com\denticheck\api\domain\admin\service\impl\AdminServiceImpl.java:169: error: cannot find symbol
                log.info("Fetching products with category: {}, keyword: {}", category, keyword);
                ^
  symbol:   variable log
  location: class AdminServiceImpl
C:\DentiCheck\denticheck\api\src\main\java\com\denticheck\api\domain\admin\service\impl\AdminServiceImpl.java:186: error: cannot find symbol
                log.info("Fetching insurance products with category: {}, keyword: {}", category, keyword);
                ^
  symbol:   variable log
  location: class AdminServiceImpl
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/DentiCheck/denticheck/api/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\DentiCheck\denticheck\api\src\main\java\com\denticheck\api\domain\admin\service\impl\AdminServiceImpl.java:151: error: cannot find symbol
                  log.info("Fetching dentists with keyword: {}", keyword);
                  ^
    symbol:   variable log
    location: class AdminServiceImpl
  C:\DentiCheck\denticheck\api\src\main\java\com\denticheck\api\domain\admin\service\impl\AdminServiceImpl.java:169: error: cannot find symbol
                  log.info("Fetching products with category: {}, keyword: {}", category, keyword);
                  ^
    symbol:   variable log
    location: class AdminServiceImpl
  C:\DentiCheck\denticheck\api\src\main\java\com\denticheck\api\domain\admin\service\impl\AdminServiceImpl.java:186: error: cannot find symbol
                  log.info("Fetching insurance products with category: {}, keyword: {}", category, keyword);
                  ^
    symbol:   variable log
    location: class AdminServiceImpl
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use unchecked or unsafe operations.
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 4s
2 actionable tasks: 2 executed
